deployment/dev/backend/templates/deployment.yaml
---
# Source: backend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-asgerthyregoddk-deployment
  namespace: asgerthyregoddkdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-asgerthyregoddk-app
      version: v1
  template:
    metadata:
      labels:
        app: dev-asgerthyregoddk-app
        version: v1
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: sa
      imagePullSecrets:
      - name: acr-pull
      containers:
      - name: asgerthyregoddk-pod
        image: rg.fr-par.scw.cloud/crn-shared-prd-scr-lz-fr-par/tgc-atdk-app:325ff3abb4d93e0bd0f5e891012064836f80cca9
        ports:
        - containerPort: 80
