deployment/dev/backend/templates/httproute.yaml
---
# Source: backend/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dev-asgerthyregoddk-httproute
  namespace: asgerthyregoddkdev
spec:
  parentRefs:
    - name: gateway
      namespace: gatewayapi
      sectionName: dev-asgerthyregod-dk-https
  hostnames:
    - dev.asgerthyregod.dk
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dev-asgerthyregoddk-svc
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
